--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,7 +5,7 @@ name: Publish website
 # Controls when the action will run.
 on:
   push:
-    branches: [master]
+    branches: [main]
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
