--- a/managed-jbake-context.yml
+++ b/managed-jbake-context.yml
@@ -1,16 +1,16 @@
 bake:
   srcPath: "."
   destDirPath: "bake"
-  cname: "cheroliv.com"
+#  cname: "cheroliv.com"
 pushPage:
   from: "bake"
   to: "cvs"
   repo:
     name: "cheroliv.github.io"
-    repository: "https://github.com/cheroliv/cheroliv.github.io.git"
+    repository: "https://github.com/pages-content/millBakerSample.git"
     credentials:
       username: "cheroliv"
       # Note: you can pass the password using environment variable $PUSH_TOKEN
       # password: "mytoken"
-  branch: "master"
+  branch: "main"
   message: "cheroliv.com"
